# Operank-Scheduling

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  THIRDPARTYLICENSES  requirements.txt  run.bat  setup.cfg  setup.py
assets/: 3_class_estimation_model.json  example_operating_room_schedule.json  example_patient_data.json  surgery_to_category.json  surgery_to_team_mapping.csv
docs/: conf.py  index.rst
src/operank_scheduling/: run_gui.py  skeleton.py  surgery_scheduler.py
src/operank_scheduling/algo/: algo_helpers.py  distribution_models.py  intermediate_solutions_cb.py  patient_assignment.py  surgery_distribution_models.py
src/operank_scheduling/automation/: automatic_scheduling.py  metrics.py
src/operank_scheduling/gui/: gui_ui_models.py  scheduling_page.py  setup_page.py  static_ui_elements.py  structs.py  summary_page.py  theme.py  ui_models.py  ui_tables.py
src/operank_scheduling/models/: enums.py  io_utilities.py  operank_models.py  operating_room.py  parse_data_to_models.py  parse_hopital_data.py  parse_patient_data.py  surgery.py
src/operank_scheduling/prediction/: categorization.py  surgery_duration_estimation.py
tests/: conftest.py  test_algo_helpers.py  test_models.py  test_parse_hospital_data.py  test_patient_assignment.py  test_preliminary_scheduling.py  test_skeleton.py  test_surgery_scheduling.py
