[metadata]
name = operank_scheduling
description = System for optimizing patient scheduling, for hospitals.
author = Alon Budker & Itay Zilka
author_email = alonbudker@mail.tau.ac.il
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest

[options.entry_points]
console_scripts =
    operank = operank_scheduling.run_gui

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests


[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 119
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = operank_scheduling
